fix: fixed controllers and corresponding services
