# src/main/java/com/epam/gym/controller/TraineeController.java
@@ -123,7 +123,7 @@ public class TraineeController {
     // response: 200 OK
     @Authenticated
     @PatchMapping("/active-state/{username}")
-    public ResponseEntity<String> changeProfileActiveState(@PathVariable String username, @Valid @RequestBody Boolean isActive) {
+    public ResponseEntity<String> changeProfileActiveState(@PathVariable String username, @RequestBody Boolean isActive) {
         boolean success = userService.updateActiveState(username, isActive);
 
         return success ? new ResponseEntity<>("Successfully updated the active state of the trainee profile", HttpStatus.OK)
