# src/main/java/com/epam/gym/dto/model/request/ChangeLoginModel.java
@@ -5,10 +5,6 @@ import jakarta.validation.constraints.Pattern;
 import jakarta.validation.constraints.Size;
 
 public record ChangeLoginModel(
-        @NotBlank(message = "Username is mandatory")
-        @Size(min = 3, max = 20, message = "Username must be between 3 and 20 characters")
-        String username,
-
         @NotBlank(message = "Password is required")
         String oldPassword,
 
